# esi-g4-optical

./: .gitignore  README.md
julia/: CMakeLists.txt  README.md  gui.mac  opt2.cc  run1.mac  run2.mac
julia/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  RunAction.hh  Steering.hh  SteppingAction.hh  WorkerInitialization.hh
julia/julia/: custom_module.jl  my_module.jl  steering.jl
julia/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  Steering.cc  SteppingAction.cc  WorkerInitialization.cc
loadtest/: CMakeLists.txt  GNUmakefile  README.md  example.in  lt.cc
loadtest/include/: EventAction.hh  RunData.hh
loadtest/julia/: custom_module.jl
loadtest/src/: RunData.cc  SteppingAction.cc
optical/: opt.cc
optical/cad/: pb_cover_full.stl
optical/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
optical/src/: DetectorConstruction.cc  SteppingAction.cc
optical1/: CMakeLists.txt  init.mac  init_vis.mac  opt.cc  scoring.mac
optical1/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh
optical1/src/: ActionInitialization.cc  DetectorConstruction.cc  Run.cc  RunAction.cc  SteppingAction.cc
optical2/: CMakeLists.txt  README.md  gui.mac  init_vis.mac  opt2.cc  run1.mac  run3.mac  vis.mac
optical2/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunData.hh  Steering.hh  SteppingAction.hh  mpt.hh
optical2/julia/: custom_module.jl
optical2/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunData.cc  SteppingAction.cc
tmm/: CMakeLists.txt  run1.mac  vis.mac
tmm/include/: PrimaryGeneratorAction.hh  Run.hh  tmm.h
tmm/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
